--- a/teachdentistry/templates/registration/login.html
+++ b/teachdentistry/templates/registration/login.html
@@ -54,10 +54,9 @@ Log in
 <h2 class="tab-header">Learn how to become a dental educator</h2>
 
 <div class="index-tabs" id="tabs">
-	{% comment %}<div class="item-tab" id="tabs-1">
-		<h2>Watch a video</h2>
-		<p class="video-placeholder img-rounded"></p>
-	</div>{% endcomment %}
+	<div class="item-tab promo-video" id="tabs-1">
+		<p><iframe width="479" height="296" src="https://surelink.ccnmtl.columbia.edu/video/?player=mp4_public_stream&file=/2a8d209c-5209-11e3-b4da-00163e3b1544-cdm_edelstein_fall2013_teach_dentistry_promo-mp4-aac-480w-850kbps-ffmpeg.mp4&width=479&height=272&poster=http://wardenclyffe.ccnmtl.columbia.edu/uploads/images/12837/00000007.jpg"></iframe></p>
+	</div>
 	<div class="item-tab" id="tabs-2">
 		<h2>I teach dentistry because...</h2>
 		<p>Discover the rewards other dentists have received from teaching.</p>
