integrating map clusterer, and (very naively) offseting latlngs if needed. will come up with a better algorithm for this.

--- a/teachdentistry/templates/main/map.html
+++ b/teachdentistry/templates/main/map.html
@@ -10,6 +10,8 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key={{settings.GOOGLE_API_KEY}}&sensor=false">
     </script>
+    <script src="/site_media/markerclusterer/src/markerclusterer.min.js" type="text/javascript" ></script>
+    
     <script type="text/javascript" src="/site_media/js/app/map.js"></script>
     
     <script type="text/template" id="educator-template">
