--- a/media/css/main.css
+++ b/media/css/main.css
@@ -619,7 +619,7 @@ h2.tab-header {
 
 #primarynav-inner {
     height: 110px;
-    display: none;
+    display: block;
     margin: 0 auto;
     padding: 0;
     border: 0;
