--- a/teachdentistry/templates/main/map.html
+++ b/teachdentistry/templates/main/map.html
@@ -27,7 +27,7 @@
             
             <div class="educator-info">
                 <div class="educator-name"><%= name %>
-                <% if (video !== null) { %>
+                <% if (video.length > 0) { %>
                     <img src="/site_media/img/icon-camera.png" />
                 <% } %>
                 
