help box and button for map

--- a/teachdentistry/templates/main/map.html
+++ b/teachdentistry/templates/main/map.html
@@ -81,8 +81,25 @@
     <div id="map-container" class="map-container">
     <div id="section-thumbnail" class="section-thumbnail" style="margin-bottom: 10px;"><div class="section-slug thumbnail-map"></div><h3>SECTION: DENTAL EDUCATOR MAP</h3></div>
         <div class="search">
+          <div class="search-header">
             <h4>Show only...</h4>
-            
+            <a href="#search-instructions-box" role="button" class="search-instructions" data-toggle="modal"></a>
+          </div>
+<!-- Modal -->
+<div id="search-instructions-box" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="HelpModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="HelpModalLabel">How to use this map</h3>
+  </div>
+  <div class="modal-body">
+    <p>This map displays dental educators throughout the U.S. You will be able to browse the map and learn more about your peers, why they teach dentistry and in what way they are involved.</p>
+
+<p>You can sort by various categories and geographical location. Some also have videos explaining their personal story and advice, and many provide their emails in case you want to reach out to talk about teaching dentistry in the future.</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Close</button>
+  </div>
+</div>            
             <ul class="breadcrumb selected_criteria">
               
             </ul>
