--- a/media/css/main.css
+++ b/media/css/main.css
@@ -220,6 +220,7 @@ p {
 div.map-container div.search {
     float: left;
     width: 30%;
+    position: relative;
 }
 
 div.map-container div.search .accordion-heading {
@@ -273,12 +274,41 @@ div.map-container div.map {
     width: 100%;
 }
 
-.map-container h4 {
+.search-header {
+  height: 30px;
+  line-height: 30px;
+  padding: 0;
+  margin: 20px 0 0 0;
+}
+
+.search-header h4 {
     margin: 0;
-    padding: 30px 0 10px;
+    padding: 0;
     border: 0;
     font-weight: normal;
     font-size: 18px;
+    line-height: 30px;
+    float: left;
+}
+
+.search-instructions {
+  height: 28px;
+  width: 28px;
+  padding: 0;
+  margin: 0 6px 0 0;
+  border: 0;
+  background-color: #9cf;
+  border-radius: 14px;
+  float: right;
+  display: block;
+  color: #336699;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 18px;
+  text-decoration: none;
+  text-align: center;
+  font-family: "arial black";
+  background: #9cf url('/site_media/img/question-mark.png') center center no-repeat;
 }
 
 div.educator-infowindow {
