--- a/teachdentistry/templates/registration/password_change_form.html
+++ b/teachdentistry/templates/registration/password_change_form.html
@@ -1,13 +1,21 @@
 {% extends "registration/base_registration.html" %}
 {% load i18n %}
+{% block title %}Change Your Password{% endblock %}
 
 {% block registration_content %}
+<h2 class="pagetitle signuptitle">Change password</h2>
+
+<div class="p">Please use the following form to change your password.</div>
+
+
+<div class="password-reset">
 <form method="post" action=".">
   {{ form.as_p }}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
+  <input class="reset-account btn btn-primary" type="submit" value="{% trans 'Submit' %}" />
 {%csrf_token %}
 </form>
+</div>
 
 
 {% endblock %}
