--- a/teachdentistry/templates/registration/password_reset_done.html
+++ b/teachdentistry/templates/registration/password_reset_done.html
@@ -1,5 +1,6 @@
 {% extends "registration/base_registration.html" %}
 {% load i18n %}
+{% block title %}Reset Your Password{% endblock %}
 
 {% block registration_content %}
 <h2 class="pagetitle signuptitle">Reset password</h2>
