--- a/media/css/main.css
+++ b/media/css/main.css
@@ -574,6 +574,38 @@ div.profile-container .info-field .info-content {
     padding-right: 15px;
 }
 
+#change-password {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    float: right;
+    list-style: none;
+    font-size: 12px;
+    color: #666;
+    clear: right;
+}
+
+#change-password li {
+    display: block;
+    float: left;
+    margin: 0 0 0 10px;
+    padding: 0 5px 0 0;
+    border:  0;
+}
+
+#change-password li.flatpages a {
+    display: block;
+    color: #666;
+    text-decoration: none;
+    outline: 0;
+}
+
+#change-password li.flatpages a:hover {
+    color: #000;
+    text-decoration: none;
+    outline: 0;
+}
+
 footer {
     margin: 0 auto 0 auto;
     padding: 0;
