--- a/teachdentistry/templates/registration/password_change_done.html
+++ b/teachdentistry/templates/registration/password_change_done.html
@@ -1,6 +1,14 @@
 {% extends "registration/base_registration.html" %}
 {% load i18n %}
+{% block title %}Change Your Password{% endblock %}
 
 {% block registration_content %}
-<p>{% trans "Password changed" %}</p>
+<h2 class="pagetitle signuptitle">Change password</h2>
+<div class="p">
+Your password has been changed.
+</div>
+<div class="p">
+Return to <a href="/">Teach Dentistry Home</a>.
+</div>
+
 {% endblock %}
